user_project_airisc fixed

--- a/openlane/user_proj_airisc/config.json
+++ b/openlane/user_proj_airisc/config.json
@@ -1,5 +1,5 @@
 {
-    "DESIGN_NAME": "airi5c_top_asic",
+    "DESIGN_NAME": "user_proj_airisc",
     "DESIGN_IS_CORE": 0,
     "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v",
 						"dir::../../verilog/airisc_core_complex/src/airi5c_ctrl_constants.vh",
@@ -7,50 +7,50 @@
 						"dir::../../verilog/airisc_core_complex/src/airi5c_hasti_constants.vh",
 						"dir::../../verilog/airisc_core_complex/src/airi5c_dmi_constants.vh",
 						"dir::../../verilog/airisc_core_complex/src/airi5c_arch_options.vh",
-"dir::../../verilog/airisc_core_complex/src/airi5c_arch_options.vh",
-"dir::../../verilog/airisc_core_complex/src/rv32_opcodes.vh",
-"dir::../../verilog/airisc_core_complex/src/airi5c_ctrl_constants.vh",
-"dir::../../verilog/airisc_core_complex/src/airi5c_PC_mux.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_alu_ops.vh",
-"dir::../../verilog/airisc_core_complex/src/airi5c_alu.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_fetch.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_dmi_constants.vh",
-"dir::../../verilog/airisc_core_complex/src/airi5c_csr_addr_map.vh",
-"dir::../../verilog/airisc_core_complex/src/airi5c_hasti_constants.vh",
-"dir::../../verilog/airisc_core_complex/src/airi5c_core.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_csr_file.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_ctrl.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_dmem_latch.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_EX_pregs.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_WB_pregs.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_decode.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_debug_module.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_debug_rom.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_periph_mux.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_pipeline.v",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_custom/src/airi5c_custom.v",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_mul_div/src/airi5c_mul_div.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_hasti_bridge.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_src_a_mux.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_src_b_mux.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_imm_gen.v",
-"dir::../../verilog/airisc_core_complex/src/airi5c_regfile.v",	
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_dtm/src/airi5c_dtm.v",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_spi/src/airi5c_spi.v",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart_constants.vh",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart.v",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart_fifo.v",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart_tx.v",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart_rx.v",	
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_gpio/src/airi5c_gpio.v",
-"dir::../../verilog/airisc_core_complex/src/modules/airi5c_timer/src/airi5c_timer.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_arch_options.vh",
+						"dir::../../verilog/airisc_core_complex/src/rv32_opcodes.vh",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_ctrl_constants.vh",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_PC_mux.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_alu_ops.vh",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_alu.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_fetch.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_dmi_constants.vh",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_csr_addr_map.vh",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_hasti_constants.vh",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_core.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_csr_file.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_ctrl.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_dmem_latch.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_EX_pregs.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_WB_pregs.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_decode.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_debug_module.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_debug_rom.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_periph_mux.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_pipeline.v",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_custom/src/airi5c_custom.v",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_mul_div/src/airi5c_mul_div.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_hasti_bridge.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_src_a_mux.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_src_b_mux.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_imm_gen.v",
+						"dir::../../verilog/airisc_core_complex/src/airi5c_regfile.v",	
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_dtm/src/airi5c_dtm.v",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_spi/src/airi5c_spi.v",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart_constants.vh",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart.v",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart_fifo.v",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart_tx.v",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/airi5c_uart_rx.v",	
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_gpio/src/airi5c_gpio.v",
+						"dir::../../verilog/airisc_core_complex/src/modules/airi5c_timer/src/airi5c_timer.v",
 						"dir::../../verilog/airisc_core_complex/tb/configs/airi5c_top_asic.v",
 						"dir::../../verilog/rtl/user_proj_airisc.v"
 						],
 	"VERILOG_INCLUDE_DIRS": ["dir::../../verilog/airisc_core_complex/src/", "dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/"],					
     "CLOCK_PERIOD": 10,
     "CLOCK_PORT": "wb_clk_i",
-    "CLOCK_NET": "counter.clk",
+    "CLOCK_NET": "airisc.clk",
     "FP_SIZING": "absolute",
     "DIE_AREA": "0 0 900 600",
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
