--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -1,12 +1,13 @@
 {
     "DESIGN_NAME": "user_project_wrapper",
     "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/user_project_wrapper.v"],
+	"VERILOG_INCLUDE_DIRS": ["dir::../../verilog/airisc_core_complex/src/", "dir::../../verilog/airisc_core_complex/src/modules/airi5c_uart/src/"],						
     "CLOCK_PERIOD": 10,
     "CLOCK_PORT": "user_clock2",
     "CLOCK_NET": "mprj.clk",
     "FP_PDN_MACRO_HOOKS": "mprj vccd1 vssd1 vccd1 vssd1",
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
-    "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/rtl/user_proj_airisc.v"],
+    "VERILOG_FILES_BLACKBOX": ["dir::../../verilog/rtl/defines.v", "dir::../../verilog/airisc_core_complex/src/airi5c_hasti_constants.vh", "dir::../../verilog/rtl/user_proj_airisc.v"],
     "EXTRA_LEFS": "dir::../../lef/user_proj_airisc.lef",
     "EXTRA_GDS_FILES": "dir::../../gds/user_proj_airisc.gds",
     "FP_PDN_CHECK_NODES": 0,
