--- a/.github/workflows/user_project_ci.yml
+++ b/.github/workflows/user_project_ci.yml
@@ -89,7 +89,7 @@ jobs:
 
       - name: Harden using Openlane
         run: |
-          make user_proj_example
+          make user_proj_airisc
           make user_project_wrapper
 
       - name: run precheck
